Fix Alignment of text on resume section.

--- a/css/custom.css
+++ b/css/custom.css
@@ -13,6 +13,10 @@ b {
 	margin-bottom: 0px;
 }
 
+.display-block {
+	display: block;
+}
+
 .hs-text-6 {
   position: relative;
   margin-top: 0;
